--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/djhelmick/full-stack-open-part3#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.0",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
